[package]
name = "counter-contract"
version = "0.11.0"
description = "counter constract"
keywords = ["cosmwasm", "blockchain"]
edition = "2021"
exclude = [".env"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []

[dependencies]
cw-storage-plus = "1.0"
cw2 = "1.0"
cosmwasm-schema = "1.2"
schemars = "0.8.10"
thiserror = { version = "1.0.21" }
serde_json = "1.0.79"
cosmwasm-std = "1.4.1"
